--- a/demo/templates/home.html
+++ b/demo/templates/home.html
@@ -1,22 +1,142 @@
-<!DOCTYPE html>
+{% extends "common_elements/base_skeleton.html" %}
+{% load user_profiles_filters %}
 {% load socialaccount %}
-<html>
-<head>
-    <title>User Registration</title>
-</head>
-<body>
-<b>User Registration</b><br><br>
-<form action="" method="post"> {% csrf_token %}
-    Email: {{ form.email }}{{ form.email.errors }}<br><br>
-    Password: {{ form.password }}{{ form.password.errors }}<br><br>
-    Name: {{ form.name }}{{ form.name.errors }}<br><br>
-    <input type="submit" value="Register" onclick="this.disabled=true, this.form.submit()" />
-</form>
-<br>
-<b><u>Social Login:</u></b><br>
-<a href="{% provider_login_url "facebook" method="oauth2" %}">Facebook</a><br>
-<a href="{% provider_login_url "twitter" method="oauth2" %}">Twitter</a>
+{% block page_title %}Home{% endblock %}
+{% block extra_css %}
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/magichome.css"/>
+{% endblock %}
+{% block extra_js %}{% endblock %}
+
+{% block page_content %}
+<div class="banner">
+    	<div class="container">
+        	<div class="row">
+            	<div class="col-md-6">
+                	<h1>Build software better, together.</h1>
+                    <h4>Powerful collaboration, code review, and code management for open source and private projects. Need private repositories.</h4>
+                </div>
+                <div class="col-md-4 col-xs-offset-1">
+
+
+
+
+
+
+                	<form action="" method="post"  id="top-space1"> {% csrf_token %}
+  						<div class="form-group">
+                            {{ form.name|htmlattributes:"class:form-control textbox1,placeholder:Name" }}{{ form.name.errors }}
+
+{#                            <input type="text" class="form-control textbox1" placeholder="Username">#}
+                         </div>
+                         <div class="form-group">
+                             {{ form.email|htmlattributes:"class:form-control textbox1,placeholder:Email" }}{{ form.email.errors }}
+{#                            <input type="text" class="form-control textbox1" placeholder="Your email">#}
+                         </div>
+                         <div class="form-group">
+                             {{ form.password|htmlattributes:"class:form-control textbox1, placeholder:Password" }}{{ form.password.errors }}
+{#                            <input type="text" class="form-control textbox1" placeholder="Password">#}
+                         </div>
+                         <div class="form-group">
+                             <button type="button" class="btn btn-primary btn-lg btn-block" id="btn1" onclick="this.disabled=true, this.form.submit()">Sign up</button>
+                         </div>
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <div class="form-group">
+                                     <button type="button" class="btn btn-primary btn-lg btn-block fb-button" id="btn1"><center><a href="{% provider_login_url "facebook" method="oauth2" %}"><img class="img-responsive" src="{{STATIC_URL }}img/fb.png"></a> </center></button>
+                                </div>
+                            </div>
+                            <div class="col-xs-6">
+                                <div class="form-group">
+                                     <button type="button" class="btn btn-primary btn-lg btn-block twitter-button" id="btn1" ><center><a href="{% provider_login_url "twitter" method="oauth2" %}"><img class="img-responsive" src="{{STATIC_URL }}img/twitter1.png"></a> </center></button>
+                                 </div>
+                             </div>
+                        </div>
+                     </form>
+                    <p>By clicking "Sign up", you agree to our terms of service and privacy policy. We will send you account related emails occasionally.</p>
+                    <p id="c-already-signin">Already Registered? <a data-href="/login" data-toggle="modal" data-target="#myModal">Login here</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+   <!--Banner ends---------------------------------------------------------------------------->
+
+   <!--Contents ---------------------------------------------------------------------------->
+
+  <div class="container" id="contents">
+  	<div class="row">
+    	<div class="col-md-12">
+        	<h1>Why you’ll love MagicD</h1>
+            <h4>Powerful features to make software development more collaborative.</h4>
+        </div>
+
+    </div>
+    <div class="row">
+    	<div class="col-md-4">
+        	<center><div class="img1"><button class="btn btn-content">Read More >></button></div></center>
+            <h3>Great Collaboration </h3>
+            <p>Review changes, comment on lines of code, report issues, and plan the future of your project with discussion tools.</p>
+        </div>
+        <div class="col-md-4">
+        	<center><div class="img2"><button class="btn btn-content">Read More >></button></div></center>
+            <h3>Friction-less Model</h3>
+            <p>Review changes, comment on lines of code, report issues, and plan the future of your project with discussion tools.</p>
+        </div>
+        <div class="col-md-4">
+        	<center><div class="img3"><button class="btn btn-content">Read More >></button></div></center>
+            <h3>Open source Model</h3>
+            <p>Review changes, comment on lines of code, report issues, and plan the future of your project with discussion tools.</p>
+
+        </div>
+
+    </div>
+
+  </div>
+{##}
+{#<b>User Registration</b><br><br>#}
+{#<form action="" method="post"> {% csrf_token %}#}
+{#    Email: {{ form.email|htmlattributes:"class:form-control textbox1" }}{{ form.email.errors }}<br><br>#}
+{#    Password: {{ form.password }}{{ form.password.errors }}<br><br>#}
+{#    Name: {{ form.name }}{{ form.name.errors }}<br><br>#}
+{#    <input type="submit" value="Register" onclick="this.disabled=true, this.form.submit()" />#}
+{#</form>#}
+{#<br>#}
+{#<b><u>Social Login:</u></b><br>#}
+{##}
+{#<a href="{% provider_login_url "facebook" method="oauth2" %}">Facebook</a><br>#}
+{#<a href="{% provider_login_url "twitter" method="oauth2" %}">Twitter</a>#}
 <br><br>
-Already Registered? <a href="/login">Login here</a>
-</body>
-</html>
+
+<!-- Small modal -->
+
+
+<div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" id="myModal" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+        <div class="modal-header" id="c-model-header1">
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <h4 class="modal-title" id="myModalLabel">Log in</h4>
+        </div>
+      <div class="modal-body" id="c-model-body">
+          <form  action="" method="post"> {% csrf_token %}
+                              <div class="form-group">
+{#                                 {{ form.username|htmlattributes:"class:form-control textbox1,placeholder:Username" }}{{ form.username.errors }}#}
+                                <input type="text" class="form-control textbox1" placeholder="Email">
+                              </div>
+
+                              <div class="form-group">
+                                  {{ form.password|htmlattributes:"class:form-control textbox1,placeholder:Password" }}{{ form.password.errors }}
+                             </div>
+                             <div class="form-group">
+                                 <button type="button" class="btn btn-primary btn-lg btn-block" id="btn2" value="Sign In">Sign in</button>
+                             </div>
+
+          </form>
+      </div>
+
+    </div>
+  </div>
+</div>
+{% endblock %}
