--- a/demo/templates/login.html
+++ b/demo/templates/login.html
@@ -14,7 +14,7 @@
 </ul>
 {% endif %}
 
-<form action="." method="post"> {% csrf_token %}
+<form action="" method="post"> {% csrf_token %}
     Email: {{ form.username }}{{ form.username.errors }}<br><br>
     Password: {{ form.password }}{{ form.password.errors }}<br><br>
     {{ error_message }}<br>
