Design changes and bug fixes.

--- a/demo/templates/common_elements/widget_header.html
+++ b/demo/templates/common_elements/widget_header.html
@@ -18,7 +18,7 @@
         <li><a href="#">About</a></li>
         <li><a href="#">Portfolio</a></li> 
         <li><a href="#">Contact</a></li>
-        <li><button class="btn" id="btn-menu">Sign in</button></li>  
+        <li><button  class="btn" id="btn-menu" href="..login.html">Sign in</button></li>
       </ul>
      </div>
     </div>
