--- a/demo/templates/common_elements/base_skeleton.html
+++ b/demo/templates/common_elements/base_skeleton.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load socialaccount %}
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,6 +31,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
-
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('#btn-menu').on('click',function(e){
+                e.preventDefault();
+                window.location.href="login"
+            })
+        });
+    </script>
     {% block extra_js %} {% endblock %}
 </html>
