Added email verification page, dashboard changes.

--- a/demo/templates/dashboard.html
+++ b/demo/templates/dashboard.html
@@ -4,8 +4,8 @@
     <title>DASHBOARD</title>
 </head>
 <body>
-Welcome {{ user_profile.name }}
-
+Hi {{ user_profile.name }}
+<a href="/profile">View Profile</a>
 <a href="/logout">Logout</a>
 </body>
 </html>
