--- a/demo/templates/common_elements/base_skeleton.html
+++ b/demo/templates/common_elements/base_skeleton.html
@@ -40,4 +40,13 @@
         });
     </script>
     {% block extra_js %} {% endblock %}
+
+{% if messages %}
+    {% for each_message in messages %}
+        <div class="c-alert alert alert-{{ each_message.tags }}">
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <p class="text-center">{{ each_message|safe }}</p>
+        </div>
+    {% endfor %}
+{% endif %}
 </html>
