--- a/demo/templates/profile.html
+++ b/demo/templates/profile.html
@@ -5,5 +5,57 @@
 </head>
 <body>
 <a href="/">Home</a>
+<br><br>
+<b>Caption</b>
+<form action="" method="post">{% csrf_token %}
+{{ caption_form.caption }}
+<input type="submit" id="caption_submit" name="caption_submit" value="Save">
+</form>
+
+<br><br>
+Photos:
+<form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
+{{ form.file }}
+<input type="submit" id="photo_submit" name="photo_submit" value="Upload">
+</form>
+
+{% for photo in photos %}
+<img src="{{ MEDIA_URL }}/{{ photo.file_path }}" alt="Photo" height="80" width="100">
+<br>
+{% endfor %}
+
+<br><br>
+Audios:
+<form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
+{{ form.file }}
+<input type="submit" id="audio_submit" name="audio_submit" value="Upload">
+</form>
+
+{% for audio in audios %}
+    <audio controls>
+      <source src="{{ MEDIA_URL }}/{{ audio.file_path }}" type="audio/ogg">
+      <source src="{{ MEDIA_URL }}/{{ audio.file_path }}" type="audio/mpeg">
+    Your browser does not support the audio element.
+    </audio>
+
+<br>
+{% endfor %}
+
+<br><br>
+Videos:
+<form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
+{{ form.file }}
+<input type="submit" id="video_submit" name="video_submit" value="Upload">
+</form>
+
+{% for video in videos %}
+    <video width="320" height="240" controls>
+      <source src="{{ MEDIA_URL }}/{{ video.file_path }}" type="video/mp4">
+      <source src="movie.ogg" type="video/ogg">
+    Your browser does not support the video tag.
+    </video>
+<br>
+{% endfor %}
+
 </body>
 </html>
